--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "concurrently": "^9.1.0",
-    "tailwindcss": "^3.4.16",
-    "vite": "^6.0.3"
+    "concurrently": "9.1.0",
+    "tailwindcss": "3.4.16",
+    "vite": "6.0.3"
   }
 }
